continued website development

--- a/assets/css/templatemo-art-factory.css
+++ b/assets/css/templatemo-art-factory.css
@@ -743,7 +743,7 @@ TRY IT ... with or without CENTER CENTER
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url(../images/banner2.png);
+  background-image: url(../images/banner-bg.png);
   background-repeat: no-repeat;
 /*
 TRY IT ... with or without CENTER CENTER
