--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="assets/css/templatemo-art-factory.css">
     <link rel="stylesheet" type="text/css" href="assets/css/owl-carousel.css">
-
+      <link rel = "icon" href ="assets/images/title_icon.png" type = "image/x-icon">
     </head>
     
     <body>
@@ -85,7 +85,7 @@
                         <a href="#about" class="main-button-slider">Find Out More</a>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
-                        <img src="icon.png" class="rounded img-fluid d-block mx-auto" alt="First Vector Graphic">
+                        <img src="assets/images/icon.png" class="rounded img-fluid d-block mx-auto" alt="First Vector Graphic">
                     </div>
                 </div>
             </div>
@@ -149,7 +149,7 @@
                 <div class="owl-carousel owl-theme">
                     <div class="item service-item">
                         <div class="icon">
-                            <i><img src="assets/images/service-icon-01.png" alt=""></i>
+                            <i><img src="assets/images/gd_small.png" alt=""></i>
                         </div>
                         <h5 class="service-title">Gradient Decent</h5>
                         <p>Our grdient decent notebook would help you learn the basics about this algorithm</p>
@@ -157,7 +157,7 @@
                     </div>
                     <div class="item service-item">
                         <div class="icon">
-                            <i><img src="assets/images/service-icon-02.png" alt=""></i>
+                            <i><img src="assets/images/svm_small.png" alt=""></i>
                         </div>
                         <h5 class="service-title">SVM</h5>
                         <p>Our SVM notebook would help you learn the basics about this learning algorithm</p>
@@ -165,7 +165,7 @@
                     </div>
                     <div class="item service-item">
                         <div class="icon">
-                            <i><img src="assets/images/service-icon-03.png" alt=""></i>
+                            <i><img src="assets/images/newton_small.png" alt=""></i>
                         </div>
                         <h5 class="service-title">Newton</h5>
                         <p>Our Newton notebook would help you learn the basics about this optimization algorithm</p>
