--- a/templates/viewerGDpyver.html
+++ b/templates/viewerGDpyver.html
@@ -7,7 +7,7 @@
     <script src={{url_for('static', filename='viewer/dat.gui.js')}}></script>
 
     <!-- http://silentmatt.com/javascript-expression-evaluator/ -->
-    <script src="parser.js"></script>
+    <script src={{url_for('static', filename='viewer/parser.js')}}></script>
 
     <link rel="stylesheet" href={{url_for('static', filename='viewer/mathbox.css')}}>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
@@ -16,7 +16,6 @@
 
         }
     </style>
-    <link rel = "icon" href ={{url_for('static', filename='templates/assets/images/title_icon.png')}} type = "image/x-icon">
 </head>
 <body>
 <div id="paramForm">
@@ -105,9 +104,9 @@
     var updateGraphFunc = function() {
         currVecNum=0;
         points=[];
-        var hashParams = {{pygit string}};
+        var hashParams = "{{pyString}}";
         if(hashParams.length != 0) {
-            hashParams = hashParams.substr(1).split('&');// substr(1) to remove the `#`
+            hashParams = hashParams.split('$');// substr(1) to remove the `#`
             for (var i = 0; i < hashParams.length; i++) {
                 var p = hashParams[i].split('=');
                 if (p[0]=="points"){
@@ -124,6 +123,7 @@
                             x.style.display = "none";
                         }
                     }else {
+                        debugger;
                         document.getElementById(p[0]).value = decodeURIComponent(p[1]);
                     }
                 }
