finsh view function and update parameters

--- a/templates/gradient decent.html
+++ b/templates/gradient decent.html
@@ -86,7 +86,7 @@
 
 <section class="section" id="about2">
 
-        <iframe src="../viewer/viewerGD.html" width="100%" height="700" scrolling="no"> </iframe>
+        <iframe src="i-learn-ml.oa.r.appspot.com/?algo=Gaussian" width="100%" height="700" scrolling="no"> </iframe>
 
 </section>
 
@@ -95,7 +95,7 @@
 </section>
 
 <section class="section" id="about4">
-    <iframe src="../viewer/viewerSVM.html" width="100%" height="700" scrolling="no"> </iframe>
+    <iframe src="i-learn-ml.oa.r.appspot.com/?algo=ABS" width="100%" height="700" scrolling="no"> </iframe>
 </section>
 
 
