--- a/templates/viewerGDpyver.html
+++ b/templates/viewerGDpyver.html
@@ -81,7 +81,7 @@
 <script>
     document.getElementById("paramForm").style.display = "none";
     radiobtn = document.getElementById("{{opt}}");
-    //radiobtn.checked = true;
+    radiobtn.checked = true;
     var mathbox = mathBox({
         plugins: ['core', 'controls', 'cursor', 'mathbox'],
         controls: {klass: THREE.OrbitControls}
@@ -228,6 +228,7 @@
                 var start = points[i][currVecNum].split(',');
                 var end = points[i][currVecNum + 1].split(',');
                 if(i==0){
+                    debugger;
                     document.getElementById("x").value = start[0];
                     document.getElementById("y").value = start[1];
                 }
@@ -416,9 +417,9 @@
     updateGraphFunc();
 </script>
 <form action="/{{func}}/" methhods=['POST']>
-    <a>learning rate:</a><input name="lr" value ="{{lr}}" placeholder="learning rate">
-    <a>x:</a><input id = "x" name="x" placeholder="x">
-    <a>y:</a><input id = "y" name="y" placeholder="y">
+    <input name="lr" text ="{{lr}}" placeholder="learning rate">
+    <input id = "x" name="x" placeholder="x">
+    <input id = "y" name="y" placeholder="y">
     <input type="radio" id="SGD" name="opt" value="SGD">
     <label for="male">SGD</label>
     <input type="radio" id="MomentumSGD" name="opt" value="MomentumSGD">
