trying to fix some bugs

--- a/templates/viewerGDpyver.html
+++ b/templates/viewerGDpyver.html
@@ -79,6 +79,7 @@
 </table>
 
 <script>
+    debugger;
     document.getElementById("paramForm").style.display = "none";
     radiobtn = document.getElementById("{{opt}}");
     radiobtn.checked = true;
