added graddecent explanation and fixed bugs

--- a/templates/assets/css/templatemo-art-factory.css
+++ b/templates/assets/css/templatemo-art-factory.css
@@ -1205,7 +1205,7 @@ course
 --------------------------------------------- 
 */
 #course {
-  padding: 120px 0px;
+  padding: 25px 10%;
   border-bottom: 1px solid #eee;
 
 }
