fixed some stuff on gradient decent.html

--- a/templates/gradient decent.html
+++ b/templates/gradient decent.html
@@ -43,7 +43,7 @@
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
                         <li class="scroll-to-section"><a href="index.html">Home</a></li>
-                        <li class="scroll-to-section"><a href="#about">About</a></li>
+                        <li class="scroll-to-section"><a href="#gd">What is Gradient Decent?</a></li>
                         <li class="scroll-to-section"><a href="#services">Services</a></li>
                         <li class="scroll-to-section"><a href="#frequently-question">Frequently Questions</a></li>
                         <li class="submenu">
@@ -80,7 +80,8 @@
 
 
 <!-- ***** Features Big Item Start ***** -->
-<section id="course">
+<div id="course">
+<section id="gd">
     <h2 align="center">What is Gradient Decent?</h2>
    <h5> <br>Gradient descent is an optimization algorithm used to minimize some function by iteratively moving in the direction of steepest descent as defined by the negative of the gradient.
     In analogy, we can think of Gradient Descent as being a ball rolling down on a valley. The deepest valley is the optimal global minimum and that is the place we aim for. Depending on where the ball starts rolling, it may rest in the bottom of a valley. But not in the lowest one. This is called a local minimum and in the context of our model, the valley is the error surface.
@@ -110,7 +111,7 @@
 <section class="section" id="about4">
     <iframe src="../viewer/viewerSVM.html" width="100%" height="700" scrolling="no"> </iframe>
 </section>
-
+</div>
 
 
 
