--- a/templates/viewerGDpyver.html
+++ b/templates/viewerGDpyver.html
@@ -17,6 +17,7 @@
         }
     </style>
     <link rel = "icon" href ={{url_for('static', filename='images/title_icon.png')}} type = "image/x-icon">
+    <link rel="stylesheet" type="text/css" href={{url_for('static', filename='../../templates/assets/css/templatemo-art-factory.css')}}>
 </head>
 <body>
 <div id="paramForm">
