--- a/templates/viewerGDpyver.html
+++ b/templates/viewerGDpyver.html
@@ -16,7 +16,7 @@
             display : none;
         }
     </style>
-    <link rel = "icon" href ={{url_for('static', filename='images/title_icon.png')}} type = "image/x-icon">
+    <link rel = "icon" href ={{url_for('static', filename='assets/images/title_icon.png')}} type = "image/x-icon">
     <link rel="stylesheet" type="text/css" href={{url_for('static', filename='../../templates/assets/css/templatemo-art-factory.css')}}>
 </head>
 <body>
@@ -27,7 +27,7 @@
             <tr>
                 <td>
                     Function:
-                    <input type="text" id="func" name="func" value="sin(x^2+y^2)">
+                    <input class="contact-field" type="text" id="func" name="func" value="sin(x^2+y^2)">
                 </td>
                 <td>
                     Style:
@@ -58,13 +58,13 @@
             </tr>
             <tr>
                 <td colspan="4">
-                    xMax : <input type="text" id="xmax" value="3"> xMin : <input type="text" id="xmin" value="-3"> yMax : <input type="text" id="ymax" value="3"> YMin : <input type="text" id="ymin" value="-3"> zMax : <input type="text" id="zmax" value="0"> zMin : <input type="text" id="zmin" value="0">
+                    xMax : <input class="contact-field" type="text" id="xmax" value="3"> xMin : <input class="contact-field" type="text" id="xmin" value="-3"> yMax : <input class="contact-field" type="text" id="ymax" value="3"> YMin : <input class="contact-field" type="text" id="ymin" value="-3"> zMax : <input class="contact-field" type="text" id="zmax" value="0"> zMin : <input class="contact-field" type="text" id="zmin" value="0">
                 </td>
             </tr>
             <tr>
                 <td colspan="4">
-                    startX : <input type="text" id="startx" value="0"> startY : <input type="text" id="starty" value="0"> startZ : <input type="text" id="startz" value="0">endX : <input type="text" id="endx" value="0"> endY : <input type="text" id="endy" value="0"> endZ : <input type="text" id="endz" value="0">
-                    <button type="button" onclick="updateGraph()">update Graph</button>
+                    startX : <input class="contact-field" type="text" id="startx" value="0"> startY : <input class="contact-field" type="text" id="starty" value="0"> startZ : <input class="contact-field" type="text" id="startz" value="0">endX : <input class="contact-field" type="text" id="endx" value="0"> endY : <input class="contact-field" type="text" id="endy" value="0"> endZ : <input class="contact-field" type="text" id="endz" value="0">
+                    <button class="main-button" type="button" onclick="updateGraph()">update Graph</button>
                 </td>
             </tr>
         </form>
@@ -75,24 +75,24 @@
 <table>
     <tr>
         <td>
-            <button type="button" onclick="NextVec()">Next Step</button>
-            <button type="button" onclick="PrevVec()">Previous Step</button>
+            <button class="main-button" type="button" onclick="NextVec()">Next Step</button>
+            <button class="main-button" type="button" onclick="PrevVec()">Previous Step</button>
         </td>
 
     </tr>
 </table>
 <form action="/{{func}}/" methhods=['POST']>
-    <a>learning rate:</a><input name="lr" value ="{{lr}}" placeholder="learning rate">
-    <a>x:</a><input id = "x" name="x" placeholder="x">
-    <a>y:</a><input id = "y" name="y" placeholder="y">
-    <a>epochs:</a><input id = "epochs" value ="{{epochs}}" name="epochs" placeholder="epochs">
+    <a>learning rate:</a><input class="contact-field" name="lr" value ="{{lr}}" placeholder="learning rate">
+    <a>x:</a><input class="contact-field" id = "x" name="x" placeholder="x">
+    <a>y:</a><input class="contact-field" id = "y" name="y" placeholder="y">
+    <a>epochs:</a><input class="contact-field" id = "epochs" value ="{{epochs}}" name="epochs" placeholder="epochs">
     <input type="radio" id="SGD" name="opt" value="SGD">
     <label for="male">SGD</label>
     <input type="radio" id="MomentumSGD" name="opt" value="MomentumSGD">
     <label for="female">MomentumSGD</label>
     <input type="radio" id="Newton" name="opt" value="Newton">
     <label for="other">Newton</label>
-    <button name="send" type="submit">GO</button>
+    <button class="main-button" name="send" type="submit">GO</button>
 </form>
 </div>
 <script>
@@ -152,7 +152,6 @@
 					}
 				}
 			}
-		}
 		var zFunc = Parser.parse(document.getElementById("func").value.toLowerCase()).toJSFunction(['x', 'y']);
 		var graphColorStyle = document.getElementById("style").value.toLowerCase();
 		var wireframe = document.getElementById("wireframe").value.toLowerCase();
@@ -275,7 +274,6 @@
 				});
 				vec[0].set("points", vecData);
 			}
-
 	}
 
 	// end of updateGraph function ==============================================================
